# solo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/com/keno/: App.java
app/src/main/java/com/keno/solo/: App.java
app/src/main/java/com/keno/solo/game/: Game.java  Playable.java
app/src/main/java/com/keno/solo/game/engine/: PlotFour.java  PlotFourAI.java  PlotFourOffline.java  PlotFourOnline.java
app/src/main/java/com/keno/solo/game/engine/boardgame/: Boardgame.java  Position.java  Unit.java
app/src/main/java/com/keno/solo/game/engine/plot_four/: PlotFour.java  PlotFourAI.java  PlotFourOffline.java  PlotFourOnline.java
app/src/main/java/com/keno/solo/game_logic/: Game.java
app/src/main/java/com/keno/solo/game_logic/boardgame/: BoardPosition.java  Boardgame.java
app/src/main/java/com/keno/solo/game_logic/boardgame/plot_four/: PlotFour.java  PlotFourOffline.java  PlotFourPiece.java
app/src/main/java/com/keno/solo/game_logic/game_engine/boardgame/: BoardPosition.java  Boardgame.java
app/src/main/java/com/keno/solo/game_logic/game_engine/plot_four/: PlotFour.java  PlotFourOffline.java  PlotFourPiece.java
app/src/test/java/org/example/: AppTest.java
headers/game_engine/: Game.hpp
headers/game_engine/game_logic/boardgame/: BoardPosition.hpp  Boardgame.hpp
headers/game_engine/game_logic/boardgame/plot_four/: PlotFour.hpp  PlotFourOffline.hpp  PlotFourPiece.h
qml/: main.qml
sources/: main.cpp
sources/game_engine/: Game.cpp
sources/game_engine/game_logic/boardgame/: BoardPosition.cpp  Boardgame.cpp
sources/game_engine/game_logic/boardgame/plot_four/: PlotFour.cpp  PlotFourOffline.cpp
